--- a/php82-fpm-wpcli-composer/Dockerfile
+++ b/php82-fpm-wpcli-composer/Dockerfile
@@ -5,6 +5,7 @@ RUN set -eux; \
     apt-get update; \
     apt-get upgrade -y; \
     apt-get install -y --no-install-recommends \
+            unzip \
             curl \
             libmemcached-dev \
             libz-dev \
